# tts-storyteller

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  FILE_UPLOAD_FEATURE.md  Makefile  README.md  STORY_PROMPT.md  VIBEVOICE_IMPLEMENTATION.md  VOICE_CLONING_API.md  alembic.ini  docker-compose.yml  env.sh  plan.md  pyproject.toml  requirements-qwen.txt  requirements-vibevoice.txt  requirements.txt  run.sh
alembic/: env.py
alembic/versions/: 2026_02_02_001_initial_schema.py  2026_02_02_002_add_missing_indexes.py  2026_02_04_001_add_backend_column.py
api/: app.py  main.py
api/routes/: audio.py  jobs.py  pools.py  stories.py  voices.py
docs/: ARCHITECTURE.md  BACKENDS.md  README.md  SWAGGER.md  openapi.json  story-template.schema.json  web-app.md
docs/features/: file-upload.md  vibevoice-implementation.md
examples/: vibevoice_smoke.py
lib/: __init__.py  backend_factory.py  config.py  database.py  db_models.py  env.py  generation.py  incremental.py  metadata.py  models.py  paths.py  resolution.py  runtime.py  storage.py  validation.py  voice_generation.py  voice_metadata.py
lib/backends/: __init__.py  _torch_utils.py  base.py  qwen.py  vibevoice.py
lib/repositories/: __init__.py  base.py  db_impl.py  factory.py  file_impl.py
outputs/voice_design/: voice_design_meta.json
prompts/: captain.pt  child.pt  man.pt  narrator.pt  narrator_female.pt  narrator_male.pt  old_lady.pt  old_man.pt  old_man2.pt  prompts_meta.json  woman.pt
scripts/: __init__.py  common.py  convert_txt.py  create_prompts.py  download_models.py  migrate_to_db.py  start.sh  storyteller.py  test_vibevoice.py  validate_story.py  voice_design.py
services/: __init__.py  jobs.py  models.py  story_generation.py  voice_generation.py
stories/: milo.txt  milo2.txt  new.txt  story.json  story.txt  template.json
tests/: __init__.py  conftest.py  test_api_routes.py  test_backends.py  test_basic.py  test_generation_indices.py  test_jobs_sse.py  test_jobs_worker.py  test_migrations.py  test_resolution_incremental.py  test_vibevoice_backend.py  test_voice_backend_paths.py
voices/: .voice_metadata.json  voices.json
