[project]
name = "tts-storyteller"
version = "0.1.0"
description = "Multi-backend TTS API for multi-voice story generation"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.12.0",
    "aiofiles==24.1.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "audioread==3.1.0",
    "brotli==1.2.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cmake==4.2.1",
    "coloredlogs==15.0.1",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.3.3",
    "decorator==5.2.1",
    "einops==0.8.1",
    "fastapi==0.128.0",
    "ffmpy==1.0.0",
    "filelock==3.20.3",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.2/flash_attn-2.8.3+cu128torch2.8-cp312-cp312-linux_x86_64.whl",
    "flatbuffers==25.12.19",
    "fsspec==2026.1.0",
    "groovy==0.1.2",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "humanfriendly==10.0",
    "idna==3.11",
    "Jinja2==3.1.6",
    "joblib==1.5.3",
    "lazy_loader==0.4",
    "librosa==0.11.0",
    "llvmlite==0.46.0",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "networkx==3.6.1",
    "ninja==1.13.0",
    "numba==0.63.1",
    "numpy==2.3.5",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvtx-cu12==12.8.90",
    "onnxruntime==1.23.2",
    "orjson==3.11.5",
    "packaging==26.0",
    "pandas==2.3.3",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "pooch==1.8.2",
    "protobuf==6.33.4",
    "psutil==7.2.1",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "pydub==0.25.1",
    "Pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.22",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "regex==2026.1.15",
    "requests==2.32.5",
    "rich==14.3.1",
    "safehttpx==0.1.7",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "semantic-version==2.10.0",
    "setuptools==80.10.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "soundfile==0.13.1",
    "sox==1.5.0",
    "soxr==1.0.0",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "tomlkit==0.13.3",
    "torch==2.8.0+cu128",
    "torchaudio==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "triton==3.4.0",
    "typer==0.21.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "python-dotenv>=1.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pre-commit>=3.5.0",
]
qwen = [
    "qwen-tts>=0.0.5",
]
vibevoice = [
    # VibeVoice dependencies to be added
]
all = [
    "qwen-tts>=0.0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "qwen_tts.*",
    "scripts.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
