[project]
name = "tts-storyteller"
version = "0.1.0"
description = "Local multi-backend TTS API and CLI for multi-voice story generation"
authors = [{ name = "Timur Kazbekov" }]
readme = "README.md"
license = "MIT"
# <3.13 because the prebuilt flash-attn wheel below is cp312-only; widen when
# a newer wheel is adopted.
requires-python = ">=3.12,<3.13"
dependencies = [
    # API
    "fastapi>=0.128,<1",
    "uvicorn>=0.40,<1",
    "python-multipart>=0.0.22",
    "pydantic>=2.12,<3",
    # Persistence
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "alembic>=1.13,<2",
    # Env/config
    "python-dotenv>=1.0",
    # Audio IO (lib/runtime.py save_wav)
    "numpy>=2.1,<3",
    "soundfile>=0.13",
    # Model download (scripts/download_models.py)
    "huggingface-hub>=0.36",
]

[project.optional-dependencies]
qwen = [
    "qwen-tts>=0.1.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "flash-attn; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
vibevoice = [
    "vibevoice",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "bitsandbytes>=0.41; sys_platform == 'linux'",
    "flash-attn; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
# No "all" extra: use `uv sync --all-extras` (make install-all).

[dependency-groups]
dev = [
    # Keep ruff in lockstep with the rev in .pre-commit-config.yaml.
    "ruff==0.15.20",
    "mypy>=1.14",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pre-commit>=4",
    "httpx>=0.28",
]

[tool.uv]
# Flat repo layout (api/, lib/, services/); env.sh provides PYTHONPATH.
package = false
# Only resolve for platforms we actually run on; the flash-attn wheel is
# linux-x86_64-only and would break universal resolution otherwise.
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin'",
]
# vibevoice pins transformers==4.51.3/accelerate==1.6.0; qwen-tts pins
# ==4.57.3/==1.12.0. Force the qwen versions (the previously deployed,
# known-good combination) so both backends can live in one environment —
# required for multi-backend story generation. VibeVoice is experimental;
# validate with examples/vibevoice_smoke.py after dependency bumps.
override-dependencies = [
    "transformers==4.57.3",
    "accelerate==1.12.0",
]

[tool.uv.sources]
vibevoice = { git = "https://github.com/vibevoice-community/VibeVoice.git", rev = "07cb79feadd2d3fd7f47530d4c964a12857936a0" }
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.2/flash_attn-2.8.3+cu128torch2.8-cp312-cp312-linux_x86_64.whl" }
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "qwen_tts.*",
    "torch.*",
    "flash_attn.*",
    "vibevoice.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
